汉化以及增加失败不可用原因

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,5 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - ./database.db:/app/database.db
+      - ./data:/app/data
     restart: unless-stopped
